# gacha-gotcha

./: Anchor.toml  README.md  package.json  tsconfig.json  txtx.yml
app/: index.ts  utils.ts
programs/gacha-gotcha/: Cargo.toml
programs/gacha-gotcha/src/: lib.rs
programs/gacha-gotcha/src/error/: mod.rs
programs/gacha-gotcha/src/instructions/: bid.rs  buy_pack.rs  cancel.rs  commit_open.rs  create_pack.rs  list.rs  mod.rs  open_pack.rs  settle.rs
programs/gacha-gotcha/src/state/: mod.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: gacha-gotcha.ts
